# libsikuli

./: .gitignore  CMakeLists.txt  build.sh
interfaces/python/: setup.py
src/: region.cpp  region.h  robot.cpp
src/test/: CMakeLists.txt
